[package]
name = "phazer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ansi_term = "0.12.1"
chrono = "0.4.24"
toml = "0.7.3"
serde = { version = "1.0.162", features = ["derive"] }
serde_toml = "0.0.1"
clap = { version = "4.2.7", features = ["derive"] }
